# brain-mri-tumor-ensemble

./: .gitignore  Makefile  Nahro_Karlo_19003070_BrainScanML_synoptic.pptx  Nahro_Karlo_BrainScanML_synoptic.ipynb  README.md  README_BrainScanML.txt  config.yaml  datamodule.py  eval.py  final_summary.json  gradcam.py  model_factory.py  pyproject.toml  requirements.txt  splits.csv  test_metrics_final.csv  train.py  utils.py
src/brain_mri_tumor_ensemble/: datamodule.py  gradcam.py  model_factory.py  utils.py
